--- a/taskTracker/src/App.css
+++ b/taskTracker/src/App.css
@@ -10,6 +10,7 @@ body {
   display: flex;
   align-items: start;
   justify-content: space-around;
+  flex-wrap: wrap;
 }
 .heading {
   text-align: center;
@@ -21,20 +22,20 @@ body {
   flex-direction: column;
   margin: 50px 0;
   gap: 30px;
-  min-height: 40vh;
+  min-height: 30vh;
   width: 50%;
   padding: 10px;
 }
 .search {
   outline: none;
   border-radius: 2px;
-  width: 500px;
+  width: 70%;
   border: 1px solid black;
   background-color: transparent;
   padding: 15px 20px;
 }
 .tasks {
-  width: 65%;
+  width: 80%;
   padding: 10px;
   list-style: none;
 }
@@ -80,4 +81,17 @@ body {
   margin: 10px;
   padding: 10px;
   list-style: none;
+}
+
+
+/* responsive ----------- */
+
+@media only screen and (max-width: 912px) {
+  /* For mobile phones: */
+  .taskContainer{
+  width: 100%;
+  }
+  .completed-task-container{
+    width: 100%;
+  }
 }
